added sass, basic nav bar styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Jeannie An</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/resources/sass/index.css" />
+  </head>
+  <body>
+    <div class="header">
+      <header>Jeannie An</header>
+      <nav class="navigation-bar">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Blog</a></li>
+      </nav>
+    </div>
+  </body>
 </html>
+
+<!DOCTYPE html>
