working on nav barg

--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
     <link rel="stylesheet" href="/resources/sass/index.css" />
   </head>
   <body>
-    <div class="header">
-      <header>Jeannie An</header>
+    <header class="header" role="banner">
+      <div class="container">
+        <div class="header-logo">
+          <img
+            src="/resources/images/icons8-wavy-line-100.png"
+            alt="logo"
+            width="55px"
+            height="auto"
+          />
+        </div>
+        <h1>Jeannie An</h1>
+      </div>
+    </header>
+    <div class="navigation" role="navigation">
       <nav class="navigation-bar">
         <li><a href="#">About</a></li>
         <li><a href="#">Projects</a></li>
