working on nav bar

--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
   <body>
     <header class="header" role="banner">
       <div class="container">
-        <div class="header-logo">
-          <img
-            src="/resources/images/icons8-wavy-line-100.png"
-            alt="logo"
-            width="55px"
-            height="auto"
-          />
-        </div>
-        <h1>Jeannie An</h1>
+        <img
+          class="header-logo"
+          src="/resources/images/programming.png"
+          alt="logo"
+        />
+        <span class="header-text">Jeannie An</span>
       </div>
     </header>
     <div class="navigation" role="navigation">
@@ -28,6 +25,15 @@
         <li><a href="#">Projects</a></li>
         <li><a href="#">Blog</a></li>
       </nav>
+    </div>
+
+    <div class="content" role="main">
+      <section class="container">
+        <header class="article-header">Hi, I'm Jeannie</header>
+        <div class="article-body">
+          <p>I design</p>
+        </div>
+      </section>
     </div>
   </body>
 </html>
