nav bar working

--- a/index.html
+++ b/index.html
@@ -10,26 +10,35 @@
     <script async src="/resources/js/index.js"></script>
   </head>
   <body>
-    <header class="header sticky">
+    <!-- <header class="header sticky">
       <img
         class="header-logo"
         src="/resources/images/programming.png"
         alt="logo"
       />
       <div class="header-text">Jeannie An</div>
-    </header>
+    </header> -->
 
-    <nav class="navigation-bar">
+    <nav class="navigation-bar sticky">
+      <div class="logo-box sticky">
+        <img
+          class="logo-icon"
+          src="/resources/images/programming.png"
+          alt="logo"
+        />
+        <div class="logo-text sticky">Jeannie An</div>
+      </div>
+
       <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
         <li><a href="#">Blog</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">About</a></li>
       </ul>
     </nav>
 
     <div class="content" role="main">
       <section class="container">
-        <header class="article-header">Hi, I'm Jeannie</header>
+        <header class="article-header"><h1>Hi, I'm Jeannie</h1></header>
         <div class="article-body">
           <p>I design</p>
           <p>
