finalised nav bar

--- a/index.html
+++ b/index.html
@@ -21,12 +21,8 @@
 
     <nav class="navigation-bar sticky">
       <div class="logo-box sticky">
-        <img
-          class="logo-icon"
-          src="/resources/images/programming.png"
-          alt="logo"
-        />
-        <div class="logo-text sticky">Jeannie An</div>
+        <img class="logo-icon" src="/resources/images/dog.png" alt="logo"><a href ="#"></a></img>
+        <!-- <div class="logo-text sticky">Jeannie An</div> -->
       </div>
 
       <ul>
