--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul>
         <li><a href="#">Blog</a></li>
         <li><a href="#">Projects</a></li>
-        <li><a href="#">About</a></li>
+        <li class ="active"><a href="about.html">About</a></li>
       </ul>
     </nav>
 
