--- a/projects.html
+++ b/projects.html
@@ -10,10 +10,10 @@
     <script async src="/resources/js/index.js"></script>
   </head>
   <body>
-
     <nav class="navigation-bar sticky">
       <div class="logo-box sticky">
-        <img class="logo-icon" src="/resources/images/dog.png" alt="logo"><a href ="about.html"></a></img>
+        <img class="logo-icon" src="/resources/images/dog.png" alt="logo" />
+        <a href="about.html"></a>
       </div>
 
       <ul class="pages">
@@ -24,83 +24,45 @@
     </nav>
 
     <div class="content" role="main">
-      <section class="container">
-        <header class="article-header"><h3>Hi, I'm Jeannie <span class="wave">👋</span></h3>
-            <span><img class="profile" src="/resources/images/circle-cropped.png" alt="profile" />
-        </span></header>
-        <div class="article-body">
-          <p>I am a Front End Developer and I design with and for people.</p>
-          <p>
-            Pellentesque habitant morbi tristique senectus et netus et malesuada
-            fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-            ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-            egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-            eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-            Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit
-            amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
-            ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim
-            in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id
-            cursus faucibus, tortor neque egestas augue, eu vulputate magna eros
-            eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan
-            porttitor, facilisis luctus, metus
-          </p>
-          <p>
-            Pellentesque habitant morbi tristique senectus et netus et malesuada
-            fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-            ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-            egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-            eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-            Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit
-            amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
-            ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim
-            in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id
-            cursus faucibus, tortor neque egestas augue, eu vulputate magna eros
-            eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan
-            porttitor, facilisis luctus, metus
-          </p>
-          <p>
-            Pellentesque habitant morbi tristique senectus et netus et malesuada
-            fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-            ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-            egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-            eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-            Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit
-            amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
-            ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim
-            in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id
-            cursus faucibus, tortor neque egestas augue, eu vulputate magna eros
-            eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan
-            porttitor, facilisis luctus, metus
-          </p>
-          <p>
-            Pellentesque habitant morbi tristique senectus et netus et malesuada
-            fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-            ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-            egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-            eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-            Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit
-            amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
-            ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim
-            in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id
-            cursus faucibus, tortor neque egestas augue, eu vulputate magna eros
-            eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan
-            porttitor, facilisis luctus, metus
-          </p>
-         
-        </div>
-      </section>
+      <div class="projects-container">
+        <div class="project-box box1"></div>
+        <div class="project-box box2"></div>
+        <div class="project-box box3"></div>
+        <div class="project-box box4"></div>
+        <div class="project-box box5"></div>
+      </div>
     </div>
 
-
-    <footer class ="footer-wrap">
-        <p class="footer-text">Let's work together!</p>
-        <div class="social-links">
-          <a href="https://github.com/beannie-j"><img class="social-link" src="/resources/images/github-logo.png" alt="github-logo" width=2% height=2%></a>
-          <a href="https://www.linkedin.com/in/hjeanniean/"><img class="social-link" src="/resources/images/linkedin-logo.png" alt="linkedin-logo" width=2% height=2%></a>
-          <a href="mailto:jeanniehjan@gmail.com"><img class="social-link" src="/resources/images/gmail-logo.png" alt="email-logo" width=2.1% height=2.1%></a>
-        </div>
-        <div class="copyright">© 2020, Jeannie An</div>
-      </footer>
+    <footer class="footer-wrap">
+      <p class="footer-text">Let's work together!</p>
+      <div class="social-links">
+        <a href="https://github.com/beannie-j"
+          ><img
+            class="social-link"
+            src="/resources/images/github-logo.png"
+            alt="github-logo"
+            width="2%"
+            height="2%"
+        /></a>
+        <a href="https://www.linkedin.com/in/hjeanniean/"
+          ><img
+            class="social-link"
+            src="/resources/images/linkedin-logo.png"
+            alt="linkedin-logo"
+            width="2%"
+            height="2%"
+        /></a>
+        <a href="mailto:jeanniehjan@gmail.com"
+          ><img
+            class="social-link"
+            src="/resources/images/gmail-logo.png"
+            alt="email-logo"
+            width="2.1%"
+            height="2.1%"
+        /></a>
+      </div>
+      <div class="copyright">© 2020, Jeannie An</div>
+    </footer>
   </body>
 </html>
 
