--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/resources/sass/index.css" />
+    <link rel="icon" type="image/png" href="/resources/images/dog.png"/>
+
     <script async src="/resources/js/index.js"></script>
   </head>
   <body>
