projects page working

--- a/projects.html
+++ b/projects.html
@@ -14,8 +14,9 @@
   <body>
     <nav class="navigation-bar sticky">
       <div class="logo-box sticky">
-        <img class="logo-icon" src="/resources/images/dog.png" alt="logo" />
-        <a href="about.html"></a>
+        <a href="about.html"
+          ><img class="logo-icon" src="/resources/images/dog.png" alt="logo"
+        /></a>
       </div>
 
       <ul class="pages">
