--- a/about.html
+++ b/about.html
@@ -7,14 +7,16 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/resources/sass/index.css" />
-    <link rel="icon" type="image/png" href="/resources/images/dog.png"/>
+    <link rel="icon" type="image/png" href="/resources/images/dog.png" />
+
     <script async src="/resources/js/index.js"></script>
   </head>
   <body>
-
     <nav class="navigation-bar sticky">
       <div class="logo-box sticky">
-        <img class="logo-icon" src="/resources/images/dog.png" alt="logo"><a href ="about.html"></a></img>
+        <a href="about.html"
+          ><img class="logo-icon" src="/resources/images/dog.png" alt="logo"
+        /></a>
       </div>
 
       <ul class="pages">
@@ -26,82 +28,82 @@
 
     <div class="content" role="main">
       <section class="container">
-        <header class="article-header"><h3>Hi, I'm Jeannie <span class="wave">👋</span></h3>
-            <span><img class="profile" src="/resources/images/circle-cropped.png" alt="profile" />
-        </span></header>
+        <header class="article-header">
+          <h3>Hi, I'm Jeannie <span class="wave">👋</span></h3>
+          <span
+            ><img
+              class="profile"
+              src="/resources/images/circle-cropped.png"
+              alt="profile"
+            />
+          </span>
+        </header>
         <div class="article-body">
           <p>I am a Front End Developer and I design with and for people.</p>
+          <br />
           <p>
-            Pellentesque habitant morbi tristique senectus et netus et malesuada
-            fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-            ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-            egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-            eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-            Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit
-            amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
-            ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim
-            in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id
-            cursus faucibus, tortor neque egestas augue, eu vulputate magna eros
-            eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan
-            porttitor, facilisis luctus, metus
+            After a few years working as a support engineer, I realised that
+            while I'm great at the job, it lacks creativity and problem solving
+            that my brain craves. I decided it was time to change careers into
+            something I was actually passionate about.
           </p>
+          <br />
+          <p>And it turned out to be Front End Development.</p>
+          <br />
           <p>
-            Pellentesque habitant morbi tristique senectus et netus et malesuada
-            fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-            ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-            egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-            eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-            Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit
-            amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
-            ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim
-            in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id
-            cursus faucibus, tortor neque egestas augue, eu vulputate magna eros
-            eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan
-            porttitor, facilisis luctus, metus
+            I found my passion in tech, especially for Front End Development,
+            when I completed my part-time UX design course at General Assembly
+            then shifted to learning JavaScript, HTML, CSS and React when I
+            realised my vision for applications wanted to explore beyond the
+            designing prototypes. I also spent time learning Game Development
+            and 3D graphics with C++.
           </p>
+          <br />
+          <h4>P.S.</h4>
           <p>
-            Pellentesque habitant morbi tristique senectus et netus et malesuada
-            fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-            ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-            egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-            eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-            Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit
-            amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
-            ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim
-            in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id
-            cursus faucibus, tortor neque egestas augue, eu vulputate magna eros
-            eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan
-            porttitor, facilisis luctus, metus
+            I'm human and have interests outside working! This includes cycling,
+            knitting and catching up with friends.
           </p>
-          <p>
-            Pellentesque habitant morbi tristique senectus et netus et malesuada
-            fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-            ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-            egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-            eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-            Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit
-            amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
-            ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim
-            in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id
-            cursus faucibus, tortor neque egestas augue, eu vulputate magna eros
-            eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan
-            porttitor, facilisis luctus, metus
-          </p>
-         
+          <a
+            href="/resources/file/Jeannie_An_CV.pdf"
+            download
+            class="download-cv-button"
+            >download cv</a
+          >
         </div>
       </section>
     </div>
 
-
-    <footer class ="footer-wrap">
-        <p class="footer-text">Let's work together!</p>
-        <div class="social-links">
-          <a href="https://github.com/beannie-j"><img class="social-link" src="/resources/images/github-logo.png" alt="github-logo" width=2% height=2%></a>
-          <a href="https://www.linkedin.com/in/hjeanniean/"><img class="social-link" src="/resources/images/linkedin-logo.png" alt="linkedin-logo" width=2% height=2%></a>
-          <a href="mailto:jeanniehjan@gmail.com"><img class="social-link" src="/resources/images/gmail-logo.png" alt="email-logo" width=2.1% height=2.1%></a>
-        </div>
-        <div class="copyright">© 2020, Jeannie An</div>
-      </footer>
+    <footer class="footer-wrap">
+      <p class="footer-text">Let's work together!</p>
+      <div class="social-links">
+        <a href="https://github.com/beannie-j"
+          ><img
+            class="social-link"
+            src="/resources/images/github-logo.png"
+            alt="github-logo"
+            width="2%"
+            height="2%"
+        /></a>
+        <a href="https://www.linkedin.com/in/hjeanniean/"
+          ><img
+            class="social-link"
+            src="/resources/images/linkedin-logo.png"
+            alt="linkedin-logo"
+            width="2%"
+            height="2%"
+        /></a>
+        <a href="mailto:jeanniehjan@gmail.com"
+          ><img
+            class="social-link"
+            src="/resources/images/gmail-logo.png"
+            alt="email-logo"
+            width="2.1%"
+            height="2.1%"
+        /></a>
+      </div>
+      <div class="copyright">© 2020, Jeannie An</div>
+    </footer>
   </body>
 </html>
 
