--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,8 @@
       </ul>
     </nav>
 
+    <h1>Projects</h1>
+
     <div class="content" role="main">
       <div class="projects-container">
         <div class="project-box box1"></div>
