--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
       </ul>
     </nav>
 
-    <h1>Projects</h1>
+    <p class="project-header">Projects</p>
 
     <div class="content" role="main">
       <div class="projects-container">
