working on overflow hidden

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,15 @@
 
     <div class="content" role="main">
       <div class="projects-container">
-        <div class="project-box box1"></div>
+        <div class="project-box box1">
+          <span
+            >Tetris <br /><a
+              class="demo-button"
+              href="https://github.com/beannie-j/tetris"
+              >Demo</a
+            ></span
+          >
+        </div>
         <div class="project-box box2"></div>
         <div class="project-box box3"></div>
         <div class="project-box box4"></div>
