working on project title and description:

--- a/projects.html
+++ b/projects.html
@@ -14,9 +14,9 @@
   <body>
     <nav class="navigation-bar sticky">
       <div class="logo-box sticky">
-        <a href="about.html"
-          ><img class="logo-icon" src="/resources/images/dog.png" alt="logo"
-        /></a>
+        <a href="about.html"></a>
+          <img class="logo-icon" src="/resources/images/dog.png" alt="logo" />
+        </a>
       </div>
 
       <ul class="pages">
@@ -31,48 +31,76 @@
     <div class="content" role="main">
       <div class="projects-container">
         <div class="project-box box1">
-          <span
-            >Tetris <br /><a
-              class="demo-button"
-              href="https://github.com/beannie-j/tetris"
-              >Demo</a
-            ></span
-          >
+          <div class="card">
+            <!-- <img class="card-img" src="./resources/images/tetris2.png" /> -->
+            <span class="project-name">Tetris
+              <br />
+              <a class="demo-button" href="https://github.com/beannie-j/tetris">Demo</a>
+            </span>
+          </div>
         </div>
-        <div class="project-box box2"></div>
-        <div class="project-box box3"></div>
-        <div class="project-box box4"></div>
-        <div class="project-box box5"></div>
+        <div class="project-box box2">
+          <div class="card">
+            <img class="card-img" src="./resources/images/pathfinder2.png" />
+              <a class="demo-button" href="https://github.com/beannie-j/a-star-pathfinding">Demo</a>
+            </span>
+          </div>
+        </div>
+
+        <div class="project-box box3">
+          <div class="card">
+            <img class="card-img" src="./resources/images/agario.png" />
+              <a class="demo-button" href="https://github.com/beannie-j/agar-io">Demo</a>
+            </span>
+          </div>
+        </div>
+        <div class="project-box box4">
+          <div class="card">
+          <img class="card-img" src="./resources/images/myreads.png" />
+            <a class="demo-button" href="https://github.com/beannie-j/agar-io">Demo</a>
+          </span>
+        </div>
+      </div>
+        <div class="project-box box5">
+          <div class="card">
+            <img class="card-img" src="./resources/images/dino.png" />
+              <a class="demo-button" href="https://github.com/beannie-j/dinographic">Demo</a>
+            </span>
+          </div>
+        </div>
       </div>
     </div>
 
     <footer class="footer-wrap">
       <p class="footer-text">Let's work together!</p>
       <div class="social-links">
-        <a href="https://github.com/beannie-j"
-          ><img
+        <a href="https://github.com/beannie-j">
+          <img
             class="social-link"
             src="/resources/images/github-logo.png"
             alt="github-logo"
             width="2%"
             height="2%"
-        /></a>
-        <a href="https://www.linkedin.com/in/hjeanniean/"
-          ><img
+          />
+        </a>
+        <a href="https://www.linkedin.com/in/hjeanniean/">
+          <img
             class="social-link"
             src="/resources/images/linkedin-logo.png"
             alt="linkedin-logo"
             width="2%"
             height="2%"
-        /></a>
-        <a href="mailto:jeanniehjan@gmail.com"
-          ><img
+          />
+        </a>
+        <a href="mailto:jeanniehjan@gmail.com">
+          <img
             class="social-link"
             src="/resources/images/gmail-logo.png"
             alt="email-logo"
             width="2.1%"
             height="2.1%"
-        /></a>
+          />
+        </a>
       </div>
       <div class="copyright">© 2020, Jeannie An</div>
     </footer>
