working on projects page

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navigation-bar sticky">
       <div class="logo-box sticky">
-        <a href="about.html"></a>
+        <a href="about.html">
           <img class="logo-icon" src="/resources/images/dog.png" alt="logo" />
         </a>
       </div>
@@ -32,41 +32,54 @@
       <div class="projects-container">
         <div class="project-box box1">
           <div class="card">
-            <!-- <img class="card-img" src="./resources/images/tetris2.png" /> -->
-            <span class="project-name">Tetris
-              <br />
-              <a class="demo-button" href="https://github.com/beannie-j/tetris">Demo</a>
-            </span>
+            <a class="link-container" href="https://github.com/beannie-j/tetris">            
+              <img class="card-img" src="./resources/images/tetris2.png" />
+            </a>
           </div>
+          <div class="project-name">Tetris, Game Development in C++</div>
+            <a class="demo-button" href="https://github.com/beannie-j/tetris">Demo</a>
+          </span>
         </div>
+
         <div class="project-box box2">
           <div class="card">
+            <a class="link-container" href="https://github.com/beannie-j/a-star-pathfinding">
             <img class="card-img" src="./resources/images/pathfinder2.png" />
-              <a class="demo-button" href="https://github.com/beannie-j/a-star-pathfinding">Demo</a>
-            </span>
+            </a>
           </div>
+          <div class="project-name">PathFinding Visualiser, Application Development with C++</div>
+          <a class="demo-button" href="https://github.com/beannie-j/a-star-pathfinding">Demo</a>
+
         </div>
 
         <div class="project-box box3">
           <div class="card">
+            <a class="link-container" href="https://github.com/beannie-j/agar-io">
             <img class="card-img" src="./resources/images/agario.png" />
-              <a class="demo-button" href="https://github.com/beannie-j/agar-io">Demo</a>
-            </span>
+            </a>  
           </div>
+          <div class="project-name">AgarIO Clone, Game Development with Python</div>
+          <a class="demo-button" href="https://github.com/beannie-j/agar-io">Demo</a>
         </div>
+
         <div class="project-box box4">
           <div class="card">
-          <img class="card-img" src="./resources/images/myreads.png" />
-            <a class="demo-button" href="https://github.com/beannie-j/agar-io">Demo</a>
-          </span>
+            <a class="link-container" href="https://github.com/beannie-j/myreads-book-app">
+              <img class="card-img" src="./resources/images/myreads.png" />
+            </a>
         </div>
+          <div class="project-name">My Reads, Book shelf application with React</div>
+          <a class="demo-button" href="https://github.com/beannie-j/myreads-book-app">Demo</a>
       </div>
+
         <div class="project-box box5">
           <div class="card">
+            <a class="link-container" href="https://github.com/beannie-j/dinographic">
             <img class="card-img" src="./resources/images/dino.png" />
-              <a class="demo-button" href="https://github.com/beannie-j/dinographic">Demo</a>
-            </span>
+          </a>
           </div>
+          <div class="project-name">Dinographic, Simple web page with vanilla JavaScript</div>
+          <a class="demo-button" href="https://github.com/beannie-j/dinographic">Demo</a>
         </div>
       </div>
     </div>
