working on media queries

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
     <div class="content" role="main">
       <section class="container">
         <div class="article-body">
-          <p>I am a Front End Developer and I design with and for people.</p>
+          <p>Please stay tuned for my Blog posts!</p>
         </div>
       </section>
     </div>
