changed layout a little bit

--- a/about.html
+++ b/about.html
@@ -30,14 +30,17 @@
       <section class="container">
         <header class="article-header">
           <h3>Hi, I'm Jeannie <span class="wave">👋</span></h3>
-          <span
-            ><img
-              class="profile"
-              src="/resources/images/circle-cropped.png"
-              alt="profile"
-            />
-          </span>
+          <!-- <span
+            >
+          </span> -->
         </header>
+
+        <img
+          class="profile"
+          src="/resources/images/circle-cropped.png"
+          alt="profile"
+        />
+
         <div class="article-body">
           <p>I am a Front End Developer and I design with and for people.</p>
           <br />
@@ -51,9 +54,13 @@
           <p>And it turned out to be Front End Development.</p>
           <br />
           <p>
-            I found my passion in tech, especially for Front End Development,
-            when I completed my part-time UX design course at General Assembly
-            then shifted to learning JavaScript, HTML, CSS and React when I
+            My real interest is in communicating with people, and Front End
+            Development allows me to develop something that the audience can
+            see.
+          </p>
+          <p>
+            I completed my part-time UX design course at General Assembly and
+            then I shifted to learning JavaScript, HTML, CSS and React when I
             realised my vision for applications wanted to explore beyond the
             designing prototypes. I also spent time learning Game Development
             and 3D graphics with C++.
