media queries working

--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
       </div>
     </div>
 
-    <footer class="footer-wrap">
+    <!-- <footer class="footer-wrap">
       <p class="footer-text">Let's work together!</p>
       <div class="social-links">
         <a href="https://github.com/beannie-j">
@@ -117,7 +117,7 @@
         </a>
       </div>
       <div class="copyright">© 2020, Jeannie An</div>
-    </footer>
+    </footer> -->
   </body>
 </html>
 
