--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <ul class="pages">
         <li class="blog"><a href="blog.html">Blog</a></li>
         <li class="projects"><a href="projects.html">Projects</a></li>
-        <li class="about"><a href="about.html">About</a></li>
+        <li class="about active"><a href="about.html">About</a></li>
       </ul>
     </nav>
 
