--- a/projects.html
+++ b/projects.html
@@ -65,12 +65,12 @@
 
         <div class="project-box box4">
           <div class="card">
-            <a class="link-container" href="https://github.com/beannie-j/myreads-book-app">
+            <a class="link-container" href="https://myreads-jeannie.netlify.app/">
               <img class="card-img" src="./resources/images/myreads.png" />
             </a>
         </div>
           <div class="project-name">My Reads, Book shelf application with React</div>
-          <a class="demo-button" href="https://github.com/beannie-j/myreads-book-app">Demo</a>
+          <a class="demo-button" href="https://myreads-jeannie.netlify.app/">Demo</a>
       </div>
 
         <div class="project-box box5">
